# leptos-floating

./: .gitignore  .prettierrc.json  .yamllint.yaml  CLAUDE.md  Cargo.toml  README.md  justfile
.flox/: env.json
.flox/env/: manifest.toml
.github/: renovate.json5
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  publish.yml
src/: lib.rs
tests/: floating_dom_integration.rs  positioning.rs  simple_floating_integration.rs
